--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: marquee_text
 description: Scroll automatically when the child exceeds the width of the container.
-version: 2.5.0
+version: 2.5.0+1
 homepage: https://github.com/zh28/flutter-marquee-text
 
 environment:
@@ -13,4 +13,4 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
